# google_api_wrapper

./: .gitignore  LICENSE  README.md  __init__.py  client_sectres-template.json  idmap-template.json  pyproject.toml  requirements.txt  setup.py  test_import.py
api/: drive.py  forms.py
auth/: __init__.py  authenticate.py
google_api_wrapper/api/: __init__.py  drive.py  forms.py
google_api_wrapper/auth/: authenticate.py
src/google_api_wrapper/: __init__.py
src/google_api_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/google_api_wrapper/api/: drive.py  forms.py
src/google_api_wrapper/auth/: authenticate.py
src/google_api_wrapper/utils/: __init__.py  watermark.py
